--- a/assets/css/sass/general.scss
+++ b/assets/css/sass/general.scss
@@ -84,13 +84,17 @@
     .geodir-breadcrumb {
         padding: 0;
         position: relative;
-        z-index: 2;
+        z-index: 20;
         ul {
             li {
-                color: #ccc;
+                color: #fff;
+                opacity: 0.60;
                 font-size: 14px;
                 padding: 0;
                 float: none;
+                a {
+                    color: #fff;
+                }
             }
         }
     }
@@ -101,7 +105,7 @@
                 margin: 2.15em auto 1.5em;
             }
             + .geodir-breadcrumb {
-                margin: 1.5em auto 2.5em;
+                margin: 1.5em auto 0;
                 @media(max-width: 1200px) {
                     margin: 0 auto 3.25em;
                 }
