--- a/assets/css/sass/maps.scss
+++ b/assets/css/sass/maps.scss
@@ -50,6 +50,7 @@
             color: #EF5350;
             h3 {
                 color: #999999;
+                font-size: 16px;
                 margin-bottom: 10px!important;
             }
             p {
@@ -90,6 +91,7 @@
             width: 300px;
             height: 100%;
             background: rgba(0, 0, 0, 0.87);
+            margin-bottom: 0;
             @media(max-width: 480px) {
                 width: 70%;
             }
