Finished forms and widget repairs.

--- a/assets/css/sass/buddypress.scss
+++ b/assets/css/sass/buddypress.scss
@@ -8,6 +8,10 @@
     }
     #geodir-wrapper-content {
         padding-top: 0;
+        @media(max-width: 1200px) {
+            float: none;
+            margin-bottom: 50px;
+        }
     }
     #reviewsTab {
         .comments-area {
