--- a/assets/css/sass/containers.scss
+++ b/assets/css/sass/containers.scss
@@ -665,6 +665,10 @@ body .flocks-widget-container {
                     font-size: 14px;
                     color: #999;
                 }
+                .geodir-post-status {
+                    color: #999;
+                    margin-top: 2.5px;
+                }
                 .geodir-pinpoint {
                     min-width: 20px;
                     min-height: 20px;
